# backend/soat/src/main/java/br/com/postech/soat/order/adapters/in/http/controller/mapper/DiscountMapper.java
@@ -1,0 +1,30 @@
+package br.com.postech.soat.order.adapters.in.http.controller.mapper;
+
+import br.com.postech.soat.openapi.model.DiscountDto;
+import br.com.postech.soat.order.core.domain.model.Discount;
+import java.util.List;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.ReportingPolicy;
+import org.mapstruct.factory.Mappers;
+
+@Mapper(componentModel = "spring",
+    unmappedTargetPolicy = ReportingPolicy.IGNORE,
+    unmappedSourcePolicy = ReportingPolicy.IGNORE)
+public interface DiscountMapper {
+
+    DiscountMapper INSTANCE = Mappers.getMapper(DiscountMapper.class);
+
+    @Mapping(target = "id", expression = "java(new DiscountId(discountDto.getId()))")
+    @Mapping(target = "value", expression = "java(new BigDecimal(discountDto.getValue()))")
+    Discount mapFrom(DiscountDto discountDto);
+
+    default List<Discount> mapFrom(List<DiscountDto> discountDtos) {
+        if (discountDtos == null) {
+            return null;
+        }
+        return discountDtos.stream()
+            .map(this::mapFrom)
+            .toList();
+    }
+}
