# backend/soat/src/main/java/br/com/postech/soat/order/adapters/in/http/controller/mapper/OrderItemRequestMapper.java
@@ -1,0 +1,34 @@
+package br.com.postech.soat.order.adapters.in.http.controller.mapper;
+
+import br.com.postech.soat.openapi.model.DiscountDto;
+import br.com.postech.soat.openapi.model.OrderItemDto;
+import br.com.postech.soat.order.core.domain.model.Discount;
+import br.com.postech.soat.order.core.domain.model.DiscountId;
+import br.com.postech.soat.order.core.domain.model.OrderItem;
+import java.math.BigDecimal;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.ReportingPolicy;
+import org.mapstruct.factory.Mappers;
+
+@Mapper(
+    componentModel = "spring",
+    unmappedTargetPolicy = ReportingPolicy.IGNORE,
+    imports = {BigDecimal.class}
+)
+public interface OrderItemRequestMapper {
+
+    OrderItemRequestMapper INSTANCE = Mappers.getMapper(OrderItemRequestMapper.class);
+
+    @Mapping(target = "price", expression = "java(new BigDecimal(orderItemDto.getPrice()))")
+    @Mapping(target = "discount", expression = "java(mapDiscount(orderItemDto.getDiscount()))")
+    @Mapping(target = "name", source = "name")
+    @Mapping(target = "quantity", source = "quantity")
+    @Mapping(target = "category", source = "category")
+    OrderItem mapFrom(OrderItemDto orderItemDto);
+
+    default Discount mapDiscount(DiscountDto dto) {
+        if (dto == null) return null;
+        return new Discount(new DiscountId(dto.getId()), new BigDecimal(dto.getValue()));
+    }
+}
