# backend/soat/src/main/java/br/com/postech/soat/order/core/domain/model/Discount.java
@@ -1,0 +1,9 @@
+package br.com.postech.soat.order.core.domain.model;
+
+import java.math.BigDecimal;
+
+public record Discount(
+    DiscountId id,
+    BigDecimal value
+) {
+}
