# backend/soat/src/main/java/br/com/postech/soat/order/infrastructure/jpa/OrderJpaRepository.java
@@ -1,0 +1,10 @@
+package br.com.postech.soat.order.infrastructure.jpa;
+
+import br.com.postech.soat.order.infrastructure.jpa.entity.OrderEntity;
+import java.util.UUID;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+@Repository
+public interface OrderJpaRepository extends JpaRepository<OrderEntity, UUID> {
+}
