# backend/soat/src/main/java/br/com/postech/soat/order/infrastructure/jpa/entity/OrderEntity.java
@@ -1,0 +1,52 @@
+package br.com.postech.soat.order.infrastructure.jpa.entity;
+
+import br.com.postech.soat.order.core.domain.model.OrderStatus;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.util.UUID;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@Table(name = "orders")
+@Entity
+public class OrderEntity {
+
+    @Id
+    private UUID id;
+
+    @Column(name = "customer_id", nullable = false)
+    private UUID customerId;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "status", nullable = false)
+    private OrderStatus status;
+
+    @Column(name = "total_price", nullable = false, precision = 18, scale = 4)
+    private BigDecimal totalPrice;
+
+    @Column(name = "discount_amount", nullable = false, precision = 18, scale = 4)
+    private BigDecimal discountAmount;
+
+    @Column(name = "observation")
+    private String observation;
+
+    @Column(name = "created_at", nullable = false)
+    @CreationTimestamp
+    private Instant createdAt;
+
+    @Column(name = "updated_at")
+    @UpdateTimestamp
+    private Instant updatedAt;
+}
