# backend/soat/src/main/resources/static/api-docs.yaml
@@ -196,36 +196,21 @@ paths:
         - url: 'http://localhost:8080'
           description: Localhost
   /orders:
-    get:
-      tags:
-        - Order
-      summary: Buscar pedido
-      operationId: get-orders
-      responses:
-        '200':
-          description: Lista de pedidos
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-      servers:
-        - url: 'http://localhost:8080'
-          description: Localhost
     post:
       tags:
         - Order
       summary: Criar pedido
+      description: |-
+        Endpoint responsável por registrar um novo pedido realizado no totem.
+        Recebe uma lista de itens escolhidos pelo cliente, aplica validações de disponibilidade, calcula o subtotal, aplica descontos válidos.
+        Retorna o resumo completo do pedido contendo os itens, valores parciais, descontos aplicados e o valor total a ser pago.
+        O pedido permanece em estado pendente de pagamento até a confirmação via meio de pagamento associado.
       operationId: post-orders
       requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
+        $ref: '#/components/requestBodies/CreateOrderRequest'
       responses:
         '201':
-          description: Pedido criado com sucesso
+          $ref: '#/components/responses/OrderCreatedResponse'
       servers:
         - url: 'http://localhost:8080'
           description: Localhost
@@ -321,6 +306,96 @@ components:
                 type: string
               category:
                 $ref: '#/components/schemas/Category'
+    CreateOrderRequest:
+      description: 'Requisição para criação de um novo pedido contendo cliente, lista de itens e observações opcionais.'
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              CustomerId:
+                $ref: '#/components/schemas/UUID'
+              items:
+                type: array
+                minItems: 1
+                maxItems: 100
+                items:
+                  $ref: '#/components/schemas/OrderItem'
+              discounts:
+                type: array
+                readOnly: true
+                items:
+                  $ref: '#/components/schemas/Discount'
+              notes:
+                type: array
+                items:
+                  type: string
+                  readOnly: true
+                  example: Remover a salada
+            required:
+              - CustomerId
+              - items
+          examples:
+            Example 1:
+              value:
+                CustomerId: 241fae7b-0210-4d29-a928-90653c9a9a89
+                items:
+                  - name: string
+                    quantity: 2
+                    price: '1946.32'
+                    category: SNACK
+                    discount:
+                      id: 241fae7b-0210-4d29-a928-90653c9a9a89
+                      value: '12.4'
+                discounts:
+                  - id: 241fae7b-0210-4d29-a928-90653c9a9a89
+                    value: '12.4'
+                notes:
+                  - Remover a salada
+  responses:
+    OrderCreatedResponse:
+      description: Example response
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              OrderId:
+                $ref: '#/components/schemas/UUID'
+              items:
+                type: array
+                readOnly: true
+                items:
+                  $ref: '#/components/schemas/OrderItem'
+              discounts:
+                type: array
+                readOnly: true
+                items:
+                  type: object
+                  properties:
+                    discountId:
+                      $ref: '#/components/schemas/UUID'
+                    type:
+                      $ref: '#/components/schemas/DiscountType'
+                    amount:
+                      $ref: '#/components/schemas/Money'
+                    reason:
+                      type: string
+              discountAmountTotal:
+                $ref: '#/components/schemas/Money'
+              subtotal:
+                $ref: '#/components/schemas/Money'
+              total:
+                $ref: '#/components/schemas/Money'
+              status:
+                $ref: '#/components/schemas/OrderStatus'
+            required:
+              - OrderId
+              - items
+              - discountAmountTotal
+              - subtotal
+              - total
+              - status
   schemas:
     Customer:
       type: object
@@ -377,3 +452,78 @@ components:
         - DESSERT
         - SIDE_DISH
       title: Category
+      description: Categoria do produto dentro do pedido.
+    UUID:
+      type: string
+      title: UUID
+      description: Identificador único universal no formato UUID.
+      format: uuid
+      pattern: '^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$'
+      minLength: 36
+      maxLength: 36
+      example: 241fae7b-0210-4d29-a928-90653c9a9a89
+    OrderItem:
+      type: object
+      title: OrderItem
+      description: 'Item individual de um pedido, contendo informações do produto e quantidade solicitada.'
+      properties:
+        name:
+          type: string
+        quantity:
+          type: integer
+          format: int32
+          minimum: 1
+          maximum: 100
+          readOnly: true
+          example: 2
+        price:
+          $ref: '#/components/schemas/Money'
+        category:
+          $ref: '#/components/schemas/Category'
+        discount:
+          $ref: '#/components/schemas/Discount'
+      required:
+        - name
+        - quantity
+        - price
+        - category
+    Money:
+      type: string
+      title: Money
+      description: 'Valor monetário representado em formato brasileiro (R$), com suporte a casas decimais.'
+      pattern: '(?:R\$\s?)?(?:\d{1,3}(?:\.\d{3})*|\d+)(?:,\d{2})?'
+      minLength: 1
+      maxLength: 1000000000000
+      readOnly: true
+      example: '1946.32'
+    Discount:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/UUID'
+        value:
+          type: string
+          pattern: '^\d{1,3}(\.\d{3})*(,\d{2})?$'
+          readOnly: true
+          example: '12.4'
+      required:
+        - id
+        - value
+    DiscountType:
+      type: string
+      enum:
+        - PERCENTAGE
+        - FIXED
+      title: DiscountType
+      readOnly: true
+    OrderStatus:
+      type: string
+      enum:
+        - RECEIVED
+        - AWAITING_PAYMENT
+        - PAID
+        - IN_PREPARATION
+        - DONE
+        - DELIVERED
+      title: OrderStatus
+      readOnly: true
